<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin">

    <ImageView
        android:id="@+id/goback"
        android:layout_width="20pt"
        android:layout_height="15pt"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/gobackicon"
        android:src="@drawable/goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/signin"
        android:textColor="#FFFFFF"
        app:cornerRadius="20px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />


    <EditText
        android:id="@+id/Phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="86dp"
        android:backgroundTint="#FFF"
        android:contentDescription="@string/twittericon"
        android:fontFamily="@font/poppinsbold"
        android:src="@drawable/twitter"
        android:text="@string/twitter"
        android:textColor="#000"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.172"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/or_sign_in_with"
        android:textColor="#5C5B5F"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#FFF"
        android:contentDescription="@string/facebookicon"
        android:src="@drawable/facebook"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/google"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="86dp"
        android:backgroundTint="#FFF"
        android:contentDescription="@string/googleicon"
        android:src="@drawable/google"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facebook"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.172"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/don_t_have_an_account"
        android:textColor="#5C5B5F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signuplink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/sign_up"
        android:textColor="#5C5B5F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logoicon"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/login_to_your_account"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/forget_your_password"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/phoneicon"
        android:src="@drawable/phoneicon"
        app:layout_constraintBottom_toBottomOf="@+id/Phone"
        app:layout_constraintStart_toStartOf="@+id/Phone"
        app:layout_constraintTop_toTopOf="@+id/Phone"
        app:layout_constraintVertical_bias="0.35" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo1"
        android:src="@drawable/pwdicon"
        app:layout_constraintBottom_toBottomOf="@+id/Password"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toTopOf="@+id/Password"
        app:layout_constraintVertical_bias="0.35" />
</androidx.constraintlayout.widget.ConstraintLayout>