<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup2" >

    <ImageView
        android:id="@+id/goback2"
        android:layout_width="20pt"
        android:layout_height="15pt"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/poppinsbold"
        android:text="Create Your Account"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="308dp"
        android:layout_height="53dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/to_make_the_payment_process_easier_fill_up_your_credit_card_information"
        android:textAlignment="textStart"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/next2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="267dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/poppinsbold"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/signinlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="31dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/sign_in"
        android:textColor="#5C5B5F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="31dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/already_have_an_account"
        android:textColor="#5C5B5F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/paypal"
        android:layout_width="90dp"
        android:layout_height="65dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#FFF"
        android:src="@drawable/paypallcard"
        app:cornerRadius="20px"
        app:layout_constraintEnd_toStartOf="@+id/visa"
        app:layout_constraintStart_toEndOf="@+id/dahabia"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/visa"
        android:layout_width="90dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#FFF"
        android:src="@drawable/visacard"
        app:cornerRadius="20px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/dahabia"
        android:layout_width="90dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFF"
        android:src="@drawable/dahabriacard"
        app:cornerRadius="20px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/credit_card_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paypal" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="Expiration Date"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/progress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/calender"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate2"
        app:layout_constraintStart_toStartOf="@+id/editTextDate2"
        app:layout_constraintTop_toTopOf="@+id/editTextDate2"
        app:layout_constraintVertical_bias="0.444" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/creditcard"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.388" />

    <Button
        android:id="@+id/back1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/poppinsbold"
        android:text="Back"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next2"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.023" />


</androidx.constraintlayout.widget.ConstraintLayout>